--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "mongoose": "^5.13.0",
     "react-router-dom": "^5.2.0",
     "router": "^1.3.5"
+  },
+  "engines": {
+    "node": "14.16.0"
   }
 }
